--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -826,8 +826,50 @@
      <height>22</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>文件</string>
+    </property>
+    <addaction name="menu_open"/>
+    <addaction name="menu_close"/>
+   </widget>
+   <widget class="QMenu" name="menu_config">
+    <property name="title">
+     <string>配置</string>
+    </property>
+    <addaction name="menu_modify"/>
+   </widget>
+   <addaction name="menu"/>
+   <addaction name="menu_config"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="menu_modify"/>
+  </widget>
+  <action name="menu_close">
+   <property name="text">
+    <string>退出</string>
+   </property>
+  </action>
+  <action name="menu_modify">
+   <property name="text">
+    <string>修改</string>
+   </property>
+  </action>
+  <action name="menu_open">
+   <property name="text">
+    <string>打开</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
