--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>746</width>
+    <width>993</width>
     <height>696</height>
    </rect>
   </property>
@@ -105,8 +105,8 @@
    <widget class="QLineEdit" name="lineEdit_Vset">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>50</y>
+      <x>360</x>
+      <y>80</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -131,8 +131,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>60</y>
+      <x>290</x>
+      <y>90</y>
       <width>54</width>
       <height>12</height>
      </rect>
@@ -144,8 +144,8 @@
    <widget class="QPushButton" name="btn_setV">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>50</y>
+      <x>440</x>
+      <y>80</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -157,8 +157,8 @@
    <widget class="QPushButton" name="btn_setC">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>80</y>
+      <x>440</x>
+      <y>110</y>
       <width>51</width>
       <height>23</height>
      </rect>
@@ -170,8 +170,8 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>90</y>
+      <x>290</x>
+      <y>120</y>
       <width>54</width>
       <height>12</height>
      </rect>
@@ -183,8 +183,8 @@
    <widget class="QLineEdit" name="lineEdit_Cset">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>80</y>
+      <x>360</x>
+      <y>110</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -196,8 +196,8 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>80</y>
+      <x>420</x>
+      <y>110</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -209,8 +209,8 @@
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>50</y>
+      <x>420</x>
+      <y>80</y>
       <width>16</width>
       <height>16</height>
      </rect>
@@ -300,8 +300,8 @@
    <widget class="QPushButton" name="pushButton_outpon">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>80</y>
+      <x>510</x>
+      <y>110</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -313,8 +313,8 @@
    <widget class="QPushButton" name="pushButton_outpoff">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>80</y>
+      <x>600</x>
+      <y>110</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -326,8 +326,8 @@
    <widget class="QPushButton" name="pushButton_Pri_Vol">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>50</y>
+      <x>510</x>
+      <y>80</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -339,8 +339,8 @@
    <widget class="QPushButton" name="pushButton_Pri_Cur">
     <property name="geometry">
      <rect>
-      <x>640</x>
-      <y>50</y>
+      <x>600</x>
+      <y>80</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -352,8 +352,8 @@
    <widget class="QPushButton" name="pushButton_OutpDelay">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>120</y>
+      <x>460</x>
+      <y>150</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -365,8 +365,8 @@
    <widget class="QLabel" name="label_8">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>120</y>
+      <x>290</x>
+      <y>150</y>
       <width>54</width>
       <height>12</height>
      </rect>
@@ -378,8 +378,8 @@
    <widget class="QLineEdit" name="lineEdit_Cset_2">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>120</y>
+      <x>360</x>
+      <y>150</y>
       <width>51</width>
       <height>20</height>
      </rect>
@@ -391,8 +391,8 @@
    <widget class="QLabel" name="label_9">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>120</y>
+      <x>420</x>
+      <y>150</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -411,7 +411,7 @@
      </rect>
     </property>
     <property name="title">
-     <string>电池充电测试功能</string>
+     <string>关闭充电测试功能</string>
     </property>
     <widget class="QPushButton" name="pushButton_shutPWM">
      <property name="geometry">
@@ -689,8 +689,8 @@
     <widget class="QPushButton" name="pushButton_busTrig">
      <property name="geometry">
       <rect>
-       <x>140</x>
-       <y>160</y>
+       <x>150</x>
+       <y>190</y>
        <width>91</width>
        <height>23</height>
       </rect>
@@ -712,6 +712,19 @@
       <string>设置BUS触发</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="pushButton_battOff">
+     <property name="geometry">
+      <rect>
+       <x>130</x>
+       <y>160</y>
+       <width>101</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>关闭充电模式</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QPushButton" name="pushButton_clear_reply">
     <property name="geometry">
@@ -731,7 +744,7 @@
      <rect>
       <x>10</x>
       <y>0</y>
-      <width>500</width>
+      <width>401</width>
       <height>41</height>
      </rect>
     </property>
@@ -744,7 +757,13 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="ipEdit">
+      <widget class="QLineEdit" name="lineEdit_ip">
+       <property name="maximumSize">
+        <size>
+         <width>120</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="text">
         <string>192.168.123.4</string>
        </property>
@@ -764,9 +783,24 @@
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="portEdit">
+      <widget class="QLineEdit" name="lineEdit_port">
+       <property name="maximumSize">
+        <size>
+         <width>50</width>
+         <height>16777215</height>
+        </size>
+       </property>
+       <property name="baseSize">
+        <size>
+         <width>20</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="text">
         <string>30000</string>
+       </property>
+       <property name="maxLength">
+        <number>10</number>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
@@ -790,7 +824,331 @@
        </property>
       </widget>
      </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_command">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>50</y>
+      <width>161</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_14">
+    <property name="geometry">
+     <rect>
+      <x>290</x>
+      <y>50</y>
+      <width>54</width>
+      <height>12</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string> 发送指令：</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btn_send_command">
+    <property name="geometry">
+     <rect>
+      <x>520</x>
+      <y>50</y>
+      <width>51</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>确定</string>
+    </property>
+   </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>720</x>
+      <y>90</y>
+      <width>181</width>
+      <height>201</height>
+     </rect>
+    </property>
+    <widget class="QLineEdit" name="lineEdit_realA">
+     <property name="geometry">
+      <rect>
+       <x>63</x>
+       <y>94</y>
+       <width>85</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_23">
+     <property name="geometry">
+      <rect>
+       <x>154</x>
+       <y>146</y>
+       <width>16</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>AH</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_15">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>94</y>
+       <width>24</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>电流</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_realWH">
+     <property name="geometry">
+      <rect>
+       <x>63</x>
+       <y>172</y>
+       <width>85</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_22">
+     <property name="geometry">
+      <rect>
+       <x>154</x>
+       <y>172</y>
+       <width>16</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>WH</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_realAH">
+     <property name="geometry">
+      <rect>
+       <x>63</x>
+       <y>146</y>
+       <width>85</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_19">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>146</y>
+       <width>24</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>电量</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_13">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>68</y>
+       <width>24</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>电压</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_realV">
+     <property name="geometry">
+      <rect>
+       <x>63</x>
+       <y>68</y>
+       <width>85</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_26">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>120</y>
+       <width>24</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>功率</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit_realW">
+     <property name="geometry">
+      <rect>
+       <x>63</x>
+       <y>120</y>
+       <width>79</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>100</width>
+       <height>16777215</height>
+      </size>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_27">
+     <property name="geometry">
+      <rect>
+       <x>154</x>
+       <y>120</y>
+       <width>16</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>WH</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_21">
+     <property name="geometry">
+      <rect>
+       <x>154</x>
+       <y>94</y>
+       <width>16</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>A</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_24">
+     <property name="geometry">
+      <rect>
+       <x>154</x>
+       <y>68</y>
+       <width>16</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>V</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_25">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>9</y>
+       <width>48</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>实时显示</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_28">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>40</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>输出状态：</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_outp_status">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>40</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>---</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_20">
+     <property name="geometry">
+      <rect>
+       <x>9</x>
+       <y>172</y>
+       <width>24</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>瓦时</string>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QPushButton" name="pushButton_2">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>40</y>
+      <width>75</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
@@ -798,7 +1156,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>746</width>
+     <width>993</width>
      <height>22</height>
     </rect>
    </property>
