--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -419,7 +419,7 @@
      <rect>
       <x>10</x>
       <y>0</y>
-      <width>631</width>
+      <width>711</width>
       <height>41</height>
      </rect>
     </property>
@@ -525,6 +525,13 @@
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_OpenUrl">
+       <property name="text">
+        <string>打开web控制页</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </widget>
@@ -776,8 +783,8 @@
     <widget class="QLabel" name="label_25">
      <property name="geometry">
       <rect>
-       <x>60</x>
-       <y>30</y>
+       <x>70</x>
+       <y>10</y>
        <width>48</width>
        <height>16</height>
       </rect>
@@ -857,18 +864,31 @@
       <string>已打开</string>
      </property>
     </widget>
+    <widget class="QCheckBox" name="checkBox_RealDisp">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>40</y>
+       <width>71</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>实时显示</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>210</y>
+      <x>180</x>
+      <y>240</y>
       <width>391</width>
       <height>251</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>1</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -878,7 +898,7 @@
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>70</y>
+        <y>80</y>
         <width>51</width>
         <height>23</height>
        </rect>
@@ -891,7 +911,7 @@
       <property name="geometry">
        <rect>
         <x>130</x>
-        <y>30</y>
+        <y>50</y>
         <width>51</width>
         <height>23</height>
        </rect>
@@ -903,8 +923,8 @@
      <widget class="QPushButton" name="btn_shutC">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>70</y>
+        <x>330</x>
+        <y>80</y>
         <width>51</width>
         <height>23</height>
        </rect>
@@ -916,7 +936,7 @@
      <widget class="QPushButton" name="btn_shutCap">
       <property name="geometry">
        <rect>
-        <x>320</x>
+        <x>330</x>
         <y>120</y>
         <width>51</width>
         <height>23</height>
@@ -930,7 +950,7 @@
       <property name="geometry">
        <rect>
         <x>200</x>
-        <y>40</y>
+        <y>60</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -943,7 +963,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>40</y>
+        <y>60</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -1022,7 +1042,7 @@
        <rect>
         <x>260</x>
         <y>120</y>
-        <width>51</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
@@ -1034,20 +1054,20 @@
       <property name="geometry">
        <rect>
         <x>260</x>
-        <y>70</y>
-        <width>51</width>
+        <y>80</y>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>0.05</string>
+       <string>0.08</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_16">
       <property name="geometry">
        <rect>
         <x>200</x>
-        <y>80</y>
+        <y>90</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -1060,33 +1080,33 @@
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>30</y>
-        <width>51</width>
+        <y>50</y>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>15.00</string>
+       <string>4.2</string>
       </property>
      </widget>
      <widget class="QLineEdit" name="lineEdit_chargeC">
       <property name="geometry">
        <rect>
         <x>70</x>
-        <y>70</y>
-        <width>51</width>
+        <y>80</y>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>2.00</string>
+       <string>0.84</string>
       </property>
      </widget>
      <widget class="QPushButton" name="btn_shutV">
       <property name="geometry">
        <rect>
-        <x>320</x>
-        <y>30</y>
+        <x>330</x>
+        <y>50</y>
         <width>51</width>
         <height>23</height>
        </rect>
@@ -1099,7 +1119,7 @@
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>80</y>
+        <y>90</y>
         <width>54</width>
         <height>12</height>
        </rect>
@@ -1113,12 +1133,15 @@
        <rect>
         <x>70</x>
         <y>120</y>
-        <width>51</width>
+        <width>41</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>30</string>
+       <string>28800</string>
+      </property>
+      <property name="maxLength">
+       <number>10</number>
       </property>
      </widget>
      <widget class="QLabel" name="label_17">
@@ -1138,26 +1161,130 @@
       <property name="geometry">
        <rect>
         <x>260</x>
+        <y>50</y>
+        <width>41</width>
+        <height>20</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>4.3</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_28">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
         <y>30</y>
+        <width>54</width>
+        <height>12</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>电池容量</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_BattCap">
+      <property name="geometry">
+       <rect>
+        <x>70</x>
+        <y>20</y>
         <width>51</width>
         <height>20</height>
        </rect>
       </property>
       <property name="text">
-       <string>16.00</string>
+       <string>8400</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_save_charge">
+     <widget class="QLabel" name="label_37">
       <property name="geometry">
        <rect>
-        <x>270</x>
-        <y>150</y>
-        <width>75</width>
-        <height>23</height>
+        <x>130</x>
+        <y>20</y>
+        <width>21</width>
+        <height>16</height>
        </rect>
       </property>
       <property name="text">
-       <string>保存设置</string>
+       <string>mAH</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_38">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>50</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>V</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_39">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>80</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>A</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_40">
+      <property name="geometry">
+       <rect>
+        <x>120</x>
+        <y>120</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>S</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_41">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>50</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>V</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_42">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>80</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>A</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_43">
+      <property name="geometry">
+       <rect>
+        <x>310</x>
+        <y>120</y>
+        <width>21</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>AH</string>
       </property>
      </widget>
     </widget>
@@ -1165,7 +1292,7 @@
      <attribute name="title">
       <string>放电</string>
      </attribute>
-     <widget class="QPushButton" name="btn_setChargeV_2">
+     <widget class="QPushButton" name="btn_setDisChargeV">
       <property name="geometry">
        <rect>
         <x>130</x>
@@ -1178,7 +1305,7 @@
        <string>确定</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_shutC_2">
+     <widget class="QPushButton" name="btn_DisshutC">
       <property name="geometry">
        <rect>
         <x>320</x>
@@ -1191,7 +1318,7 @@
        <string>确定</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_shutCap_2">
+     <widget class="QPushButton" name="btn_DisshutCap">
       <property name="geometry">
        <rect>
         <x>320</x>
@@ -1256,7 +1383,7 @@
        <string>关闭放电模式</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_setChargeT_2">
+     <widget class="QPushButton" name="btn_setDisChargeT">
       <property name="geometry">
        <rect>
         <x>130</x>
@@ -1282,7 +1409,7 @@
        <string>开启放电模式</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_disCap">
+     <widget class="QLineEdit" name="lineEdit_disshutCap">
       <property name="geometry">
        <rect>
         <x>260</x>
@@ -1305,7 +1432,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>0.05</string>
+       <string>0.08</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_32">
@@ -1331,10 +1458,10 @@
        </rect>
       </property>
       <property name="text">
-       <string>15.00</string>
+       <string>2.7</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_setChargeC_2">
+     <widget class="QPushButton" name="btn_setDisChargeC">
       <property name="geometry">
        <rect>
         <x>130</x>
@@ -1357,7 +1484,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>2.00</string>
+       <string>0.84</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_33">
@@ -1373,7 +1500,7 @@
        <string>放电电流</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="btn_shutV_2">
+     <widget class="QPushButton" name="btn_DisshutV">
       <property name="geometry">
        <rect>
         <x>320</x>
@@ -1396,7 +1523,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>30</string>
+       <string>28800</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_34">
@@ -1422,20 +1549,7 @@
        </rect>
       </property>
       <property name="text">
-       <string>16.00</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_save_discharge">
-      <property name="geometry">
-       <rect>
-        <x>300</x>
-        <y>140</y>
-        <width>75</width>
-        <height>23</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>保存设置</string>
+       <string>2.69</string>
       </property>
      </widget>
     </widget>
@@ -1505,6 +1619,114 @@
      <string>查询输出</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_QueryBatMode">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>220</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>查询电池模式</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_44">
+    <property name="geometry">
+     <rect>
+      <x>180</x>
+      <y>210</y>
+      <width>54</width>
+      <height>12</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>电池类型</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboBox_BatType">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>200</y>
+      <width>141</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <item>
+     <property name="text">
+      <string>单节锂电池3.7V</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>多节锂电池12V</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>铅酸蓄电池12V</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>铅酸蓄电池24V</string>
+     </property>
+    </item>
+   </widget>
+   <widget class="QPushButton" name="pushButton_save_charge">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>260</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>保存设置</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_OneKeyCharge">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>310</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>一键充电</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_OneKeyDisCharge">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>360</y>
+      <width>101</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>一键放电</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_45">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>640</y>
+      <width>54</width>
+      <height>12</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>四川启睿克科技有限公司</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -1551,6 +1773,17 @@
     <bool>false</bool>
    </attribute>
    <addaction name="menu_modify"/>
+  </widget>
+  <widget class="QToolBar" name="toolBar_2">
+   <property name="windowTitle">
+    <string>toolBar_2</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
   </widget>
   <action name="menu_close">
    <property name="text">
